@@ -1,5 +1,9 @@
 *SVN*
 
+* Added support for qualified fields in Proc expressions (e.g. filter {items.id == 1}.)
+
+* Added like? and in? Proc expression operators.
+
 * Added require 'date' in dataset.rb. Is this a 1.8.5 thing?
 
 * Refactored Dataset to use literal strings instead of format strings (slight performance improvement and better readability.)
